--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "compile:sass": "node-sass sass/main.scss public/style.css -w"
+    "compile:sass": "node-sass sass/main.scss src/style.css -w"
   },
   "eslintConfig": {
     "extends": "react-app"
