--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.12.0",
+    "firebase-admin": "^8.10.0",
     "material-table": "^1.57.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-mdl": "^2.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "recompose": "^0.30.0",
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
