--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "dotenv": "^8.2.0",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.10.0",
     "material-table": "^1.57.2",
