--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.10.0",
+    "firebase-functions": "^3.6.0",
     "material-table": "^1.57.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
